force-app/main/default/objects/Future_Allocation_Set__c/Future_Allocation_Set__c.object-meta.xml
<CustomObject>
    <description>A grouping of allocations for a particular opportunity, representing a future revenue state</description>
    <label>Future Allocation Set</label>
    <nameField>
        <displayFormat>FAS-{00000}</displayFormat>
        <label>Future Allocation Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Allocation Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>