force-app/main/default/objects/Future_Allocation_Set__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The date that the future allocation set goes into effect</description>
    <inlineHelpText>The date that the future allocation set goes into effect</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>