force-app/main/default/objects/Future_Allocation_Set__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Future Allocation Sets</relationshipLabel>
    <relationshipName>Future_Allocation_Sets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>