force-app/main/default/objects/Future_Allocation_Set__c/fields/Total_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated__c</fullName>
    <description>The sum of all child future allocation amounts</description>
    <inlineHelpText>The sum of all child future allocation amounts</inlineHelpText>
    <label>Total Allocated</label>
    <summarizedField>Future_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Future_Allocation__c.Future_Allocation_Set__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>