force-app/main/default/objects/Future_Allocation_Set__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Total_Allocated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>